// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationsItem should render LocationsItem as div 1`] = `
<div
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="/"
    onClick={[Function]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</div>
`;

exports[`LocationsItem should render LocationsItem as listItem with active class 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
